--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,455 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.ProfileFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Fragment.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+
+
+    <LinearLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:background="@color/home_background">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/settings"
+            android:layout_marginTop="20dp"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
+            android:layout_marginLeft="339dp"
+            android:src="@drawable/ic_settings" />
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_marginTop="30dp"
+                    android:layout_height="70dp"
+                    android:layout_width="match_parent">
+
+                        <TextView
+                            android:id="@+id/Search"
+                            android:layout_centerVertical="true"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:textAlignment="center"
+                            android:textSize="23sp"
+                            android:textColor="@color/black"
+                            android:layout_width="300dp"
+                            android:text="Gautham"
+                            android:textStyle="bold"/>
+
+                        <ImageView
+                            android:layout_alignParentRight="true"
+                            android:layout_height="70dp"
+                            android:layout_marginRight="35dp"
+                            android:layout_width="80dp"
+                            android:src="@drawable/card_4" />
+
+
+
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_marginTop="30dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:orientation="horizontal">
+
+                    <HorizontalScrollView
+                        android:id="@+id/view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="none">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/subscribed"
+                                android:layout_width="190dp"
+                                android:layout_height="wrap_content"
+                                android:text="Subscribed books"
+                                android:textAlignment="center"
+                                android:textColor="@color/black"
+                                android:textSize="22sp"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:id="@+id/internal"
+                                android:layout_width="190dp"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="Internal Storage"
+                                android:textColor="@color/black"
+                                android:textSize="22sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/purchased"
+                                android:layout_width="160dp"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="Purchased"
+                                android:textColor="@color/black"
+                                android:textSize="22sp"
+                                android:textStyle="bold" />
+
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
+
+                </LinearLayout>
+
+                <RelativeLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@color/base">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/featured_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="190dp"
+                        android:background="@color/home_background" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/ReadingnOW"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp">
+
+                    <TextView
+                        android:id="@+id/suggestion"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="200dp"
+                        android:textAlignment="center"
+                        android:layout_height="wrap_content"
+                        android:text="Reading Now"
+                        android:textColor="@color/black"
+                        android:textSize="22sp"/>
+
+                    <TextView
+                        android:layout_marginTop="20dp"
+                        android:layout_toRightOf="@+id/suggestion"
+                        android:textAlignment="textEnd"
+                        android:layout_width="200dp"
+                        android:layout_height="90dp"
+                        android:text="See All"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"/>
+
+
+                </RelativeLayout>
+
+
+
+                <RelativeLayout
+                    android:id="@+id/Readingnowmain"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/catogeries_image"
+                        android:src="@drawable/card_4"
+                        android:layout_width="160dp"
+                        android:layout_height="262dp"
+                        android:scaleType="fitXY"/>
+
+                    <TextView
+                        android:id="@+id/catogeries_title"
+                        android:layout_toRightOf="@+id/catogeries_image"
+                        android:layout_marginLeft="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Bir bar filozo fus"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"/>
+
+                    <ProgressBar
+                        android:id="@+id/mv_rating"
+                        android:layout_below="@+id/mv_descP"
+                        android:layout_marginLeft="12dp"
+                        android:layout_toRightOf="@id/catogeries_image"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:progress="70"
+                        style="?android:progressBarStyleHorizontal"
+                        android:progressTint="@color/black"/>
+
+
+
+                    <TextView
+                        android:layout_marginLeft="12dp"
+                        android:id="@+id/mv_descP"
+                        android:layout_width="170dp"
+                        android:layout_height="25dp"
+                        android:text="by semih Stamper"
+                        android:layout_toRightOf="@+id/catogeries_image"
+                        android:layout_below="@+id/catogeries_title"/>
+
+
+                    <TextView
+                        android:id="@+id/mv_price"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="40dp"
+                        android:layout_height="18dp"
+                        android:text="36%"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:layout_below="@id/mv_descP"
+                        android:layout_toEndOf="@id/mv_rating"/>
+
+                    <ImageView
+                        android:layout_height="20dp"
+                        android:layout_width="30dp"
+                        android:layout_toRightOf="@+id/mv_price"
+                        android:layout_below="@+id/mv_descP"
+                        android:src="@drawable/ic_arrow_forward_black" />
+
+                    <TextView
+                        android:layout_marginLeft="170dp"
+                        android:layout_below="@+id/mv_rating"
+                        android:layout_width="150dp"
+                        android:layout_height="20dp"
+                        android:text="pages 250 of 350"
+                        android:textColor="@color/black"/>
+
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/main5"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/cat1"
+                        android:src="@drawable/card_4"
+                        android:layout_width="160dp"
+                        android:layout_height="262dp"
+                        android:scaleType="fitXY"/>
+
+                    <TextView
+                        android:id="@+id/catttl"
+                        android:layout_toRightOf="@+id/cat1"
+                        android:layout_marginLeft="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="The Gravity of us"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"/>
+
+                    <ProgressBar
+                        android:id="@+id/star"
+                        android:layout_below="@+id/catdesc"
+                        android:layout_marginLeft="12dp"
+                        android:layout_toRightOf="@id/cat1"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:progress="70"
+                        style="?android:progressBarStyleHorizontal"
+                        android:progressTint="@color/black"/>
+
+
+
+                    <TextView
+                        android:layout_marginLeft="12dp"
+                        android:id="@+id/catdesc"
+                        android:layout_width="170dp"
+                        android:layout_height="25dp"
+                        android:text="by Phil Stamper"
+                        android:layout_toRightOf="@+id/cat1"
+                        android:layout_below="@+id/catttl"/>
+
+
+                    <TextView
+                        android:id="@+id/rate"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="40dp"
+                        android:layout_height="18dp"
+                        android:text="36%"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:layout_below="@id/catdesc"
+                        android:layout_toEndOf="@id/star"/>
+
+                    <ImageView
+                        android:layout_height="20dp"
+                        android:layout_width="30dp"
+                        android:layout_toRightOf="@+id/rate"
+                        android:layout_below="@+id/catdesc"
+                        android:src="@drawable/ic_arrow_forward_black" />
+
+                    <TextView
+                        android:layout_marginLeft="170dp"
+                        android:layout_below="@+id/star"
+                        android:layout_width="150dp"
+                        android:layout_height="20dp"
+                        android:text="pages 127 of 350"
+                        android:textColor="@color/black"/>
+
+
+                </RelativeLayout>
+
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MY Reviews"
+                    android:layout_marginLeft="20dp"
+                    android:textSize="22sp"/>
+
+                <RelativeLayout
+                    android:id="@+id/main6"
+                    android:padding="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp">
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="240dp"
+                        app:cardCornerRadius="5dp">
+
+                        <ImageView
+                            android:layout_marginLeft="10dp"
+                            android:id="@+id/gauthamimg"
+                            android:layout_marginTop="10dp"
+                            android:layout_height="50dp"
+                            android:layout_width="50dp"
+                            android:src="@drawable/card_3" />
+
+
+                        <TextView
+                            android:id="@+id/gautham"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="70dp"
+                            android:layout_below="@+id/star"
+                            android:layout_width="150dp"
+                            android:layout_height="20dp"
+                            android:text="pages 127 of 350"
+                            android:textColor="@color/black"/>
+
+
+                        <TextView
+                            android:layout_marginTop="34dp"
+                            android:layout_marginLeft="70dp"
+                            android:id="@+id/gauthamm"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="⭐⭐⭐⭐⭐"
+                            android:textSize="20sp"
+                            />
+                        <TextView
+                            android:layout_marginTop="60dp"
+                            android:layout_marginLeft="13dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/chapter1"
+                            android:textSize="20sp"
+                            />
+
+                    </androidx.cardview.widget.CardView>
+
+
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+
+                    android:padding="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp">
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="240dp"
+                        app:cardCornerRadius="5dp">
+
+                        <ImageView
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_height="50dp"
+                            android:layout_width="50dp"
+                            android:src="@drawable/card_3" />
+
+
+                        <TextView
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="70dp"
+                            android:layout_below="@+id/star"
+                            android:layout_width="150dp"
+                            android:layout_height="20dp"
+                            android:text="pages 127 of 350"
+                            android:textColor="@color/black"/>
+
+
+                        <TextView
+                            android:layout_marginTop="34dp"
+                            android:layout_marginLeft="70dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="⭐⭐⭐⭐⭐"
+                            android:textSize="20sp"
+                            />
+                        <TextView
+                            android:layout_marginTop="60dp"
+                            android:layout_marginLeft="13dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/chapter1"
+                            android:textSize="20sp"
+                            />
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </RelativeLayout>
+
+
+
+
+
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
